--- a/test/Makefile
+++ b/test/Makefile
@@ -12,7 +12,7 @@ ifneq ($(GATES),yes)
 
 # RTL simulation:
 SIM_BUILD				= sim_build/rtl
-VERILOG_SOURCES += $(addprefix $(SRC_DIR)/,$(PROJECT_SOURCES)) $(PWD)/tt_um_ALU_DECODERS.v $(PWD)/ALU3B.v $(PWD)/Decod_Gray.v $(PWD)/Decod_Octal.v $(PWD)/Mux2_1_14b.v $(PWD)/Proyecto_Final.v
+VERILOG_SOURCES += $(addprefix $(SRC_DIR)/,$(PROJECT_SOURCES))
 COMPILE_ARGS 		+= -I$(SRC_DIR)
 
 else
